--- a/practica/clase 4/index.html
+++ b/practica/clase 4/index.html
@@ -15,6 +15,17 @@
 <input type="number" id="edad" placeholder="edad">
 <button id="crearPersona">Crear</button>
 
+<table >
+    <thead >
+    <th>Nombre</th>
+    <th>Apellido</th>
+    <th>Direccion</th>
+    <th>Eliminar</th>
+    </thead>
+    <tbody id="personas">
+
+    </tbody>
+</table>
 <script src="js/main.js"></script>
 </body>
 </html>
